---
source: prql-compiler/tests/integration/main.rs
expression: "# skip_duckdb (sort in group is ignored. I think this is a bug in duckdb)\n\nfrom tracks\nselect {genre_id, media_type_id, album_id}\ngroup {genre_id, media_type_id} (sort {-album_id} | take 1)\nsort {-genre_id, media_type_id}\n"
input_file: prql-compiler/tests/integration/queries/distinct_on.prql
---
WITH table_0 AS (
  SELECT
    DISTINCT ON (genre_id, media_type_id) genre_id,
    media_type_id,
    album_id
  FROM
    tracks
  ORDER BY
    genre_id,
    media_type_id,
    album_id DESC
)
SELECT
  genre_id,
  media_type_id,
  album_id
FROM
  table_0
ORDER BY
  genre_id DESC,
  media_type_id

